--- a/src/components/Data.module.css
+++ b/src/components/Data.module.css
@@ -1,3 +1,11 @@
+.data{
+  display: grid;
+  grid-template-columns: repeat(3,auto);
+  width: 1200px;
+  justify-content: space-between;
+
+}
+
 .box{
   border: 1px solid white;
   width: 300px;
@@ -6,5 +14,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  margin-bottom: 20px;
+}
+button{
+  cursor: pointer;
+  padding: 15px;
+  background-color: black;
+  border-radius: 5px;
+  border: none;
+  color: white;
+}
+.loadmore{
+  width: 100px;
+  margin: 30px auto;
 }
